4-Deploy-App/argo-rollouts/argo-rollouts-rbac.yaml
# argo-rollouts-rbac.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: argo-rollouts
  labels:
    istio.io/dataplane-mode: ambient
---
apiVersion: v1
kind: Namespace
metadata:
  name: staging
---
apiVersion: v1
kind: Namespace
metadata:
  name: production
