4-Deploy-App/argo-rollouts/argo-rollouts-dashboard-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argo-rollouts-dashboard
  namespace: argo-rollouts
spec:
  parentRefs:
    - name: shared-gateway
      namespace: envoy-gateway
  hostnames:
    - rollouts.192.168.0.110.nip.io
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: argo-rollouts-dashboard
          port: 3100
